--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Adam Young, Michael Sullivan, Dom Wheeler, Anna Brereton",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.2.0",
     "express": "^4.18.2",
